Fix some padding on mobile

--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -53,6 +53,8 @@
 
     mix-blend-mode: difference;
     position: relative;
+
+    padding-bottom: 10px;
 }
 
 .face {
